--- a/vistas/registro.html
+++ b/vistas/registro.html
@@ -14,21 +14,33 @@
 <body>
     <div class="container ">
         <form class="card p-3 form" id="form">
-            <span id="alert" class="text text-danger" style="text-align: center;">usuario o contraseña incorrectos</span>
+            <span id="alert" class="text text-danger" style="text-align: center;">error al guardar usuario</span>
+
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="nombre" aria-describedby="emailHelp">
+            </div>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Correo</label>
                 <input type="email" class="form-control" id="correo" aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Telefono</label>
+                <input type="number" class="form-control" id="telefono" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Contraseña</label>
                 <input type="password" class="form-control" id="clave">
             </div>
-            <button type="submit" class="btn btn-primary bg-secondary">Iniciar sesion</button>
-            <p class="p-2">No tengo cuenta: <a href="http://localhost:4000/registro">Registrarase</a></p>
+            <button type="submit" class="btn btn-primary">Guardar</button>
+            <p class="p-2">Tengo cuenta: 
+                <a href="http://localhost:4000/login">Iniciar sesion</a>
+            </p>
+
         </form>
     </div>
 
-    <script src="login.js"></script>
+    <script src="registro.js"></script>
 </body>
 
 </html>
