--- a/vistas/registro.html
+++ b/vistas/registro.html
@@ -15,6 +15,7 @@
     <div class="container ">
         <form class="card p-3 form" id="form">
             <span id="alert" class="text text-danger" style="text-align: center;">error al guardar usuario</span>
+            <span id="alert1" class="text text-success" style="text-align: center;">usuario creado</span>
 
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Nombre</label>
