--- a/vistas/sala.html
+++ b/vistas/sala.html
@@ -7,16 +7,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Login</title>
+    <title>Salas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container ">
-        <h2>sala</h2>
+        <div class="card sala w-100">
+            <div class="card-header" style="display: flex; gap: 15px;">
+                <div class="card sala-item cursor-ṕoiner">
+                    <div class="card-header text-center bg-primary text-white">Sala: </div>
+                    <div class="card-body ">
+                        <h2 class="txt text-center">2</h2>
+                    </div>
+                </div>
+                <div class="card sala-item cursor-ṕoiner">
+                    <div class="card-header text-center bg-primary text-white">Sala: </div>
+                    <div class="card-body">
+                        <h2 class="txt text-center">3</h2>
+                    </div>
+                </div>
+                <div class="card sala-item cursor-ṕoiner">
+                    <div class="card-header text-center bg-primary text-white">Sala: </div>
+                    <div class="card-body">
+                        <h2 class="txt text-center">4</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body  w-100" style="display: flex;">
+                <div class="card main" id="main">
+                    <div class="card-body" style="display: flex; justify-content: center; align-items: center;">
+                        <h3 id="room text-center">
+                            Sala: 1
+                        </h3>
+                    </div>
+                    <span class="card-footer text-center" id="ctn">
+                        conetados: 3
+                    </span>
+                </div>
+                <ul class="list-group" id="list">
+                    <li class="list-group-item">Cesar fabian garces</li>
+                </ul>
+            </div>
+            <div class="card-footer">footer</div>
+        </div>
     </div>
 
-    <script src="registro.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="socket.io/socket.io.js"></script>
+    <script src="sala.js"></script>
 </body>
 
 </html>
