--- a/vistas/sala.html
+++ b/vistas/sala.html
@@ -18,6 +18,12 @@
                 <div class="card sala-item cursor-ṕoiner">
                     <div class="card-header text-center bg-primary text-white">Sala: </div>
                     <div class="card-body ">
+                        <h2 class="txt text-center">1</h2>
+                    </div>
+                </div>
+                <div class="card sala-item cursor-ṕoiner">
+                    <div class="card-header text-center bg-primary text-white">Sala: </div>
+                    <div class="card-body">
                         <h2 class="txt text-center">2</h2>
                     </div>
                 </div>
@@ -27,29 +33,23 @@
                         <h2 class="txt text-center">3</h2>
                     </div>
                 </div>
-                <div class="card sala-item cursor-ṕoiner">
-                    <div class="card-header text-center bg-primary text-white">Sala: </div>
-                    <div class="card-body">
-                        <h2 class="txt text-center">4</h2>
-                    </div>
-                </div>
             </div>
             <div class="card-body  w-100" style="display: flex;">
                 <div class="card main" id="main">
                     <div class="card-body" style="display: flex; justify-content: center; align-items: center;">
                         <h3 id="room text-center">
-                            Sala: 1
+                            Sin conexion
                         </h3>
                     </div>
                     <span class="card-footer text-center" id="ctn">
-                        conetados: 3
+                        conetados: 0
                     </span>
                 </div>
                 <ul class="list-group" id="list">
-                    <li class="list-group-item">Cesar fabian garces</li>
+                    <!-- <li class="list-group-item">Cesar fabian garces</li> -->
                 </ul>
             </div>
-            <div class="card-footer">footer</div>
+            <div class="card-footer"></div>
         </div>
     </div>
 
